hphp/hack/test/typecheck/array/safe_vector_array/darray_with_array_filter_does_not_return_vect_like_array.php
<?hh // partial

function providesDictLikeArray(): array<bool> {
  return array_filter(darray["foo" => true, "bar" => false], $x ==> true);
}
